stateDiagram-v2
    [*] --> NeitherOperand
    NeitherOperand --> LeftOperand: Operand|SetLeft()
    NeitherOperand --> End: Operator|SetErrorUnexpectedOperator()
    NeitherOperand --> End: Unknown|SetErrorUnknownSymbol()
    LeftOperand --> BothOperands: Operand|SetRight()
    LeftOperand --> End: Operator|SetErrorUnexpectedOperator()
    LeftOperand --> End: Unknown|SetResult()
    BothOperands --> End: Operand|SetErrorUnexpectedOperand()
    BothOperands --> LeftOperand: Operator|CalcLeft()
    BothOperands --> End: Unknown|SetErrorUnknownSymbol()
